<resources>
    <string name="app_name">Quản lý ngân sách</string>
    <string name="test">Hello boss Tinh</string>
    <string name="personal_infomation">Thông tin cá nhân</string>
    <string name="about_app">Thông tin ứng dụng</string>
    <string name="contact_us">Liên hệ</string>
    <string name="general_settings">Cài đặt chung</string>
    <string name="home">Trang chủ</string>
    <string name="statistics">Thống kê</string>
    <string name="history">Lịch sử</string>
    <string name="settings">Cài đặt</string>
    <string name="expense">Chi tiêu</string>
    <string name="income">Thu nhập</string>
    <string name="sum">Tổng:</string>
    <string name="date">Ngày</string>
    <string name="currency_symbol">$</string>
    <string name="add_new_item">Add new item</string>
    <string name="add_user">Add User</string>
    <string name="save">Lưu</string>
    <string name="last_name">Họ</string>
    <string name="first_name">Tên</string>
</resources>