<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_mode">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:ignore="UselessParent">
        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/item_background"
            android:orientation="horizontal"
            android:padding="6dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/personal_infomation"
                android:textSize="30sp"
                android:textColor="@color/gray"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/general_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:layout_marginVertical="10dp"
            android:background="@drawable/item_background"
            android:orientation="horizontal"
            android:padding="6dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/general_settings"
                android:textSize="30sp"
                android:textColor="@color/gray"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/general_settings"
            android:layout_marginVertical="10dp"
            android:background="@drawable/item_background"
            android:orientation="vertical"
            android:padding="6dp"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_app"
                    android:textSize="30sp"
                    android:textColor="@color/gray"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/contact_us"
                    android:textSize="30sp"
                    android:textColor="@color/gray"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>