<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="@color/cardview_light_background">
        <RelativeLayout
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/cardview_shadow_start_color">
            <LinearLayout
                android:id="@+id/sum"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="2"
                android:background="@color/design_default_color_primary_dark">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sum"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/currency_symbol"
                    android:textSize="30sp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_below="@+id/sum"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/chart"
            android:background="@color/purple_200"
            android:layout_margin="2dp">
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>