<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="@color/cardview_light_background"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/cardview_shadow_start_color">

            <LinearLayout
                android:id="@+id/sum"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/design_default_color_primary_dark"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sum"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/currency_symbol"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="30sp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sum"
                android:text="@string/date" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/chart"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/recyclerview_item"/>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>